# Enchentes

./: .gitignore  README.md  pyproject.toml  requirements.txt  requiriments.txt
data/: api.py  generate_data.py  scraping.py
data/api_recent/: .cache.sqlite  dados_api.csv  main.py  preparar_dados_recent.py  previsoes.csv  web_recent.py
data/dados_ench/API/: api_ench.csv  api_ench.py  api_ench_com_features.csv
data/dados_ench/enchentes/: a.py  enchentes.csv
data/preparar_dados/: dataset.py  media.py
data/web_scraping/: scrape_nivel.py  web_scraping_due.py  web_scraping_main.csv
data/web_scraping/output/: nivel_data_2023-09-29_2023-12-15.csv
model/: evaluate.py  feature_engineering.py  hyperparameter_tuning.py  main.py  model.pkl  save_model.py  train_model.py
notebooks/: main.ipynb  modelo_salvo.json  modelo_salvo1.json  modelo_salvo_pre_tuning.json  rascunho.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: predict.py  utils.py
