[project]
name = "enchentes"
version = "0.1.0"
description = "Flood prediction model using weather and water level data"
authors = [
    {name = "Miguel de Almeida Silva", email = "migs.asilva9@gmail.com"}
]
dependencies = [
    "numpy>=1.21.0,<1.24.0",
    "pandas>=1.3.0,<2.0.0",
    "scikit-learn>=1.0.0,<1.3.0",
    "matplotlib>=3.3.0,<3.8.0",
    "seaborn>=0.11.0",
    "xgboost>=1.6.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "lightgbm>=3.3.0",
    "catboost>=1.0.0",
    "plotly>=5.5.0,<6.0.0",
    "ipywidgets>=7.0.0",
    "jupyter>=1.0.0",
    "pycaret==3.1.0",
    "joblib==1.2.0",
]
requires-python = ">=3.9,<3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data"]

[tool.hatch.build.targets.sdist]
include = [
    "/data",
    "/notebooks",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
